fix queue element text isnt centered

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="queue" data-queue="">
-        Yeah
+        Empty
     </div>
     <div class="who_turn" data-who_turn="">
         Team A
